fix: add more spacing to blog signature

--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -48,6 +48,7 @@
         margin-block-end: 0;
     }
     &__signature {
+        margin-top: 50px;
         display: flex;
         align-items: center;
         img {
